<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/trainingLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainLinear"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/train"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginTop="10dp"
            android:textSize="60dip"
            android:textStyle="bold"
            android:id="@+id/trainingText" />

        <!--
        <Button
            android:id="@+id/buttonLearn"
            android:layout_width="212dp"
            android:layout_height="match_parent"
            android:text="@string/learn"
            android:background="@drawable/buton_selector"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="40dip"
            android:textColor="@android:color/white"
            >
        </Button>
        -->
    </LinearLayout>


    <LinearLayout
        android:id="@+id/spaceLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/trainingLinearLayout"
        android:orientation="horizontal">
    </LinearLayout>
        <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="40dip"
            android:textStyle="bold"
            android:id="@+id/textView" />
        -->

    <LinearLayout
        android:id="@+id/firstLineLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/spaceLinearLayout"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/x1"
            android:id="@+id/buttonX1"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/x2"
            android:id="@+id/buttonX2"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x3"
            android:layout_weight="1"
            android:id="@+id/buttonX3"
            />


    </LinearLayout>
    <Space
        android:layout_below="@+id/firstLineLinearLayout"
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <LinearLayout
        android:id="@+id/secondLineLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/space1"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x4"
            android:layout_weight="1"
            android:id="@+id/buttonX4"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x5"
            android:layout_weight="1"
            android:id="@+id/buttonX5"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x6"
            android:layout_weight="1"
            android:id="@+id/buttonX6"
            />


    </LinearLayout>
    <Space
        android:layout_below="@+id/secondLineLinearLayout"
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <LinearLayout
        android:id="@+id/thirdLineLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/space2"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x7"
            android:layout_weight="1"
            android:id="@+id/buttonX7"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x8"
            android:layout_weight="1"
            android:id="@+id/buttonX8"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x9"
            android:layout_weight="1"
            android:id="@+id/buttonX9"
            />

    </LinearLayout>

    <Space
        android:layout_below="@+id/thirdLineLinearLayout"
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <LinearLayout
        android:id="@+id/fourthLineLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/space3"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:id="@+id/buttonBack"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x2"
            android:layout_weight="1"
            android:id="@+id/buttonX10"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/buttonStart"
            android:textAllCaps="false"
            android:layout_weight="1"
            />

    </LinearLayout>






</RelativeLayout>
